--- a/style.css
+++ b/style.css
@@ -24,15 +24,28 @@
   }
 }
 
+.home__pinned {
+  display: flex;
+  flex-flow: row nowrap;
+}
+
 .home__list {
   display: grid;
   grid-template: 1fr / 1fr;
 }
 
+.home__list .email {
+  border-bottom: 1px solid var(--light-gray);
+}
+
+.home__pinned .email .card {
+  border: 1px solid var(--light-gray);
+}
+
 .email {
+  flex-grow: 1;
   position: relative;
   letter-spacing: -0.4px;
-  border-bottom: 1px solid var(--light-gray);
   gap: 0.25rem;
   & h1,
   h2,
@@ -41,7 +54,8 @@
   }
 }
 
-.email__actions {
+.email__actions,
+.email__priority {
   align-items: center;
   justify-content: center;
   padding: 14px 10px 14px 14px;
@@ -49,7 +63,7 @@
   & label {
     position: absolute;
   }
-  & input[type="checkbox"].email__checkbox {
+  & input[type="checkbox"] {
     position: absolute;
     opacity: 0;
     inset: 0;
@@ -64,6 +78,13 @@
     max-width: 100%;
     fill: #2e2e38;
   }
+}
+
+.email__actions {
+  width: 2.5rem;
+  & > * {
+    margin: auto;
+  }
   & span::before {
     content: " ";
     border-radius: 1rem;
@@ -72,45 +93,14 @@
     height: 2rem;
   }
   & input[type="checkbox"].email__checkbox:checked + span::before {
-    background: center / 80% no-repeat url("checkmark-outline.svg") #0164ee;
+    background: center / 80% no-repeat url(/assets/svg/checkmark-outline.svg) #0164ee;
   }
   & input[type="checkbox"].email__checkbox + span {
+    border: 1px solid #c8c8d8;
     background-color: #c8c8d8;
   }
   & > :is(input[type="checkbox"]:checked) ~ label {
     opacity: 0;
-  }
-}
-
-.email.email__unread {
-  & .email__details {
-    font-weight: 700;
-  }
-}
-
-.email__actions {
-  width: 2.5rem;
-  & > * {
-    margin: auto;
-  }
-}
-
-.email__details, .email__priority {
-    padding: 0.375rem 0.625rem 0.625rem 0.5rem;
-}
-
-.email__details {
-  flex-grow: 2;
-  flex-flow: column nowrap;
-  justify-content: space-between;
-  & h3,
-  p {
-    flex-grow: 1;
-  }
-  & > * {
-    align-items: center;
-    max-height: 2rem;
-    height: 100%;
   }
 }
 
@@ -127,6 +117,50 @@
   }
   & > :nth-child(2) {
     align-self: end;
+  }
+  & span.star {
+    width: 1rem;
+    height: 1rem;
+    pointer-events: none;
+    -webkit-mask: url(/assets/svg/star-outline.svg) no-repeat center;
+    mask: url(/assets/svg/star-outline.svg) no-repeat center;
+  }
+  & label {
+    visibility: hidden;
+  }
+  & input[type="checkbox"].star__checkbox:checked + span {
+    background: var(--gold);
+  }
+  & input[type="checkbox"].star__checkbox + span {
+    background: var(--dark-gray);
+  }
+  & > :is(input[type="checkbox"]:checked) ~ label {
+    opacity: 0;
+  }
+}
+
+.card.email__unread .email__details {
+  font-weight: 700;
+}
+
+.email__details,
+.email__priority {
+  gap: 0.25rem;
+  padding: 0.375rem 0.625rem 0.625rem 0.5rem;
+}
+
+.email__details {
+  flex-grow: 2;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+  & h3,
+  p {
+    flex-grow: 1;
+  }
+  & > * {
+    align-items: center;
+    max-height: 2rem;
+    height: 100%;
   }
 }
 
