--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@
 .card {
   display: flex;
   flex-flow: row nowrap;
-  gap: 0.25rem;
   border-radius: 1rem;
   height: 64px;
   & * {
@@ -23,6 +22,10 @@
     align-items: flex-start;
   }
 }
+
+.card.email__unread {
+    font-weight: 700;
+  }
 
 .home__pinned {
   display: flex;
@@ -54,12 +57,15 @@
   }
 }
 
+.email__details,
+.email__priority, .email__actions {
+  gap: 0.25rem;
+  padding: 0.375rem 0.625rem 0.625rem 0.5rem;
+  position: relative;
+}
+
 .email__actions,
 .email__priority {
-  align-items: center;
-  justify-content: center;
-  padding: 14px 10px 14px 14px;
-  position: relative;
   & label {
     position: absolute;
   }
@@ -81,11 +87,13 @@
 }
 
 .email__actions {
+  align-items: center;
+  justify-content: center;
   width: 2.5rem;
   & > * {
     margin: auto;
   }
-  & span::before {
+  & span.checkmark::before {
     content: " ";
     border-radius: 1rem;
     pointer-events: none;
@@ -93,7 +101,8 @@
     height: 2rem;
   }
   & input[type="checkbox"].email__checkbox:checked + span::before {
-    background: center / 80% no-repeat url(/assets/svg/checkmark-outline.svg) #0164ee;
+    background: center / 80% no-repeat url(/assets/svg/checkmark-outline.svg)
+      #0164ee;
   }
   & input[type="checkbox"].email__checkbox + span {
     border: 1px solid #c8c8d8;
@@ -114,9 +123,6 @@
     max-height: 2rem;
     height: 100%;
     gap: 0.25rem;
-  }
-  & > :nth-child(2) {
-    align-self: end;
   }
   & span.star {
     width: 1rem;
@@ -139,18 +145,8 @@
   }
 }
 
-.card.email__unread .email__details {
-  font-weight: 700;
-}
-
-.email__details,
-.email__priority {
-  gap: 0.25rem;
-  padding: 0.375rem 0.625rem 0.625rem 0.5rem;
-}
-
 .email__details {
-  flex-grow: 2;
+  flex-grow: 1;
   flex-flow: column nowrap;
   justify-content: space-between;
   & h3,
