Change link color to dark-gray

--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@
     sans-serif;
 }
 
+a {
+    color: var(--dark-gray);
+    text-decoration: none;
+}
+
 .card {
   display: flex;
   flex-flow: row nowrap;
