--- a/style.css
+++ b/style.css
@@ -12,8 +12,16 @@
 }
 
 a {
-    color: var(--dark-gray);
-    text-decoration: none;
+  color: var(--dark-gray);
+  text-decoration: none;
+}
+
+a:visited {
+  color: inherit;
+}
+
+ul {
+  overflow: hidden;
 }
 
 .card {
@@ -29,8 +37,12 @@ a {
 }
 
 .card.email__unread {
-    font-weight: 700;
+  font-weight: 700;
+  & time.email__datetime {
+    background-color: var(--light-gray);
+    border: 1px solid var(--light-gray);
   }
+}
 
 .home__pinned {
   display: flex;
@@ -38,8 +50,8 @@ a {
 }
 
 .home__list {
-  display: grid;
-  grid-template: 1fr / 1fr;
+  display: flex;
+  flex-flow: column nowrap;
 }
 
 .home__list .email {
@@ -54,18 +66,13 @@ a {
   flex-grow: 1;
   position: relative;
   letter-spacing: -0.4px;
-  gap: 0.25rem;
-  & h1,
-  h2,
-  h3 {
-    font-size: 1.2rem;
-  }
 }
 
 .email__details,
-.email__priority, .email__actions {
+.email__priority,
+.email__actions {
   gap: 0.25rem;
-  padding: 0.375rem 0.625rem 0.625rem 0.5rem;
+  padding: 0.625rem 0.625rem 0.625rem 0.5rem;
   position: relative;
 }
 
@@ -73,13 +80,13 @@ a {
 .email__priority {
   & label {
     position: absolute;
+    opacity: 0;
   }
   & input[type="checkbox"] {
     position: absolute;
     opacity: 0;
     inset: 0;
     cursor: pointer;
-    margin: 0;
     top: 0;
     bottom: 0;
     left: 0;
@@ -104,6 +111,7 @@ a {
     pointer-events: none;
     width: 2rem;
     height: 2rem;
+    z-index: 2;
   }
   & input[type="checkbox"].email__checkbox:checked + span::before {
     background: center / 80% no-repeat url(/assets/svg/checkmark-outline.svg)
@@ -136,9 +144,6 @@ a {
     -webkit-mask: url(/assets/svg/star-outline.svg) no-repeat center;
     mask: url(/assets/svg/star-outline.svg) no-repeat center;
   }
-  & label {
-    visibility: hidden;
-  }
   & input[type="checkbox"].star__checkbox:checked + span {
     background: var(--gold);
   }
@@ -163,15 +168,36 @@ a {
     max-height: 2rem;
     height: 100%;
   }
+  &::after {
+    content: " ";
+    position: absolute;
+    inset: 0;
+    cursor: pointer;
+    margin: 0;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
 }
 
-.email__datetime {
-  background-color: var(--light-gray);
-  border-radius: 0.625rem;
-  border: 1px solid var(--light-gray);
+.email__initials {
+  position: absolute;
+}
+
+time.email__datetime {
+  background-color: transparent;
+  border: 1px solid transparent;
   padding: 0 0.25rem;
   height: 1.125rem;
   line-height: 1.2;
   text-align: center;
   font-size: 0.875rem;
+  border-radius: 0.625rem;
+}
+
+time.email__datetime::before {
+  content: "sent\00a0";
+  opacity: 0;
+  width: 0;
 }
