--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
 :root {
+  --whiteish: #eeeeee;
   --gold: #ffa800;
   --light-gray: #c8c8d8;
   --dark-gray: #2e2e38;
@@ -10,6 +11,19 @@
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
     sans-serif;
   background-color: #dddeea;
+}
+
+body {
+  display: grid;
+  grid-template: auto 1fr / 1fr;
+}
+
+section > :first-child {
+  padding: 1rem 1.8rem 0.5rem 1.8rem;
+}
+
+section#all-emails {
+  flex-grow: 1;
 }
 
 a {
@@ -25,11 +39,93 @@ ul {
   overflow: hidden;
 }
 
+h1, h2, h3 {
+  flex-grow: 1;
+  white-space: nowrap;
+}
+
+p {
+  flex-grow: 1;
+}
+
+h2 {
+  text-align: right;
+  font-size: 0.75rem;
+  font-weight: 700;
+}
+
+main {
+  grid-column: span 2;
+  display: flex;
+  flex-direction: column;
+}
+
+nav {
+  grid-row: span 2 / 2;
+}
+
+header {
+  grid-row: span 2 / 2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  & > * ~ *  {
+    border-radius: 1rem;
+  }
+}
+
+header h1 {
+  text-align: right;
+  order: 1;
+}
+
+form.search-bar {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  background-color: #fff;
+}
+
+form.search-bar input[type="text"] {
+  width: 100%;
+  border: 1px solid transparent;
+}
+
+form.search-bar button {
+  border-color: transparent;
+  background: transparent;
+}
+
+form.search-bar .search-icon {
+  background: var(--dark-gray);
+  width: 1rem;
+  height: 1rem;
+  pointer-events: none;
+  -webkit-mask: url(/assets/svg/search-icon.svg) no-repeat center;
+  mask: url(/assets/svg/search-icon.svg) no-repeat center;
+}
+
+header h1::after {
+  content: "2";
+  display: inline-flex;
+  background-color: var(--blue);
+  color: var(--whiteish);
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 20px;
+  height: 20px;
+  border-radius: 99px;
+  font-size: 14px;
+  margin-left: 0.25rem;
+}
+
 .card {
   display: flex;
   flex-flow: row nowrap;
   border-radius: 1rem;
-  height: 64px;
+  gap: 0.5rem;
   & * {
     border-radius: 1rem;
     display: flex;
@@ -37,19 +133,18 @@ ul {
   }
 }
 
-.card.email__unread {
-  font-weight: 700;
-  & time.email__datetime {
-    background-color: var(--light-gray);
-    border: 1px solid var(--light-gray);
-  }
+.home__pinned {
+  margin: 0 0.5rem;
 }
 
-.home__pinned {
-  display: flex;
-  flex-flow: column nowrap;
-  align-items: center;
-  justify-content: center;
+.home__pinned .email {
+  border-radius: 1rem;
+}
+
+.home__pinned .email .card {
+  background-color: var(--whiteish);
+  border: 1px solid var(--light-gray);
+  height: 64px;
 }
 
 .home__list {
@@ -59,41 +154,48 @@ ul {
 }
 
 .home__list .email {
-  border-bottom: 1px solid var(--light-gray);
-}
-
-.home__pinned .email .card {
-  border: 1px solid var(--light-gray);
-}
-
-.home__list .email {
   flex-grow: 1;
   position: relative;
   letter-spacing: -0.4px;
   background-color: transparent;
   transition: background-color 300ms ease-out;
+  border-bottom: 1px solid var(--light-gray);
+  padding: 0 0.5rem;
+  &:hover {
+    background-color: var(--whiteish);
+  }
 }
 
-.home__pinned .email {
-  background-color: #eeeeee;
-  border-radius: 1rem;
+.home__list .email .card,
+.home__pinned .email .card {
+  align-items: center;
+  justify-content: center;
+  height: 64px;
 }
 
-.email:hover {
-  background-color: #eeeeee;
+
+.home__list .email .card.email__unread {
+  font-weight: 600;
+  color: #000;
+}
+
+.home__list .email .card.email__unread time.email__datetime {
+  background-color: var(--light-gray);
+  border: 1px solid var(--light-gray);
 }
 
 .email__details,
 .email__priority,
 .email__actions {
   gap: 0.25rem;
-  padding: 0.625rem 0.625rem 0.625rem 0.5rem;
   position: relative;
+  height: 100%;
+  max-height: 48px;
+  padding: 0.5rem 0;
 }
 
 .email__actions,
 .email__priority {
-  margin: 2px;
   & label {
     position: absolute;
     opacity: 0;
@@ -116,36 +218,36 @@ ul {
 .email__actions {
   align-items: center;
   justify-content: center;
-  width: 2.5rem;
-  & span.checkmark::before {
-    content: " ";
-    border-radius: 1rem;
-    pointer-events: none;
-    width: 2rem;
-    height: 2rem;
-    z-index: 2;
-  }
+  max-width: 48px;
+  width: 100%;
   & input[type="checkbox"].email__checkbox:checked + span::before {
     background: center / 80% no-repeat url(/assets/svg/checkmark-outline.svg)
       #0164ee;
   }
   & input[type="checkbox"].email__checkbox + span {
-    border: 1px solid #c8c8d8;
-    background-color: #c8c8d8;
+    border: 1px solid var(--light-gray);
+    background-color: var(--light-gray);
   }
   & > :is(input[type="checkbox"]:checked) ~ label {
     opacity: 0;
   }
 }
 
+.email__actions .checkmark::before {
+  content: " ";
+  border-radius: 1rem;
+  pointer-events: none;
+  width: 1.5rem;
+  height: 1.5rem;
+  z-index: 2;
+}
+
+.email__actions .email__initials {
+  position: absolute;
+  font-size: 0.75rem;
+}
+
 .email__priority {
-  & span.star {
-    width: 1rem;
-    height: 1rem;
-    pointer-events: none;
-    -webkit-mask: url(/assets/svg/star-outline.svg) no-repeat center;
-    mask: url(/assets/svg/star-outline.svg) no-repeat center;
-  }
   & input[type="checkbox"].star__checkbox:checked + span {
     background: var(--gold);
   }
@@ -158,13 +260,10 @@ ul {
 }
 
 .email__details {
-  flex-grow: 1;
   flex-flow: column nowrap;
   justify-content: space-between;
-  & h3,
-  p {
-    flex-grow: 1;
-  }
+  max-width: 1024px;
+  width: 100%;
   & > * {
     align-items: center;
     max-height: 2rem;
@@ -173,7 +272,6 @@ ul {
   &::after {
     content: " ";
     position: absolute;
-    inset: 0;
     cursor: pointer;
     margin: 0;
     top: 0;
@@ -183,11 +281,7 @@ ul {
   }
 }
 
-.email__initials {
-  position: absolute;
-}
-
-time.email__datetime {
+.email__priority time.email__datetime {
   background-color: transparent;
   border: 1px solid transparent;
   padding: 0 0.25rem;
@@ -198,8 +292,35 @@ time.email__datetime {
   border-radius: 0.625rem;
 }
 
-time.email__datetime::before {
+.email__priority time.email__datetime::before {
   content: "sent\00a0";
   opacity: 0;
   width: 0;
+}
+
+.email__priority .star {
+  width: 1rem;
+  height: 1rem;
+  pointer-events: none;
+  -webkit-mask: url(/assets/svg/star-outline.svg) no-repeat center;
+  mask: url(/assets/svg/star-outline.svg) no-repeat center;
+}
+
+@media screen and (min-width: 1024px) {
+  body {
+    height: 100svh;
+    grid-template: auto 1fr auto / auto 1fr auto;
+  }
+  nav {
+    width: 258px;
+    grid-row: 1 / span 2;
+  }
+  aside {
+    grid-row: 3 / span 1;
+    grid-column: 2;
+  }
+  header {
+    grid-column: 2 / span 3;
+    grid-row: 1;
+  }
 }
