--- a/style.css
+++ b/style.css
@@ -2,18 +2,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
 :root {
-  --whiteish: #eeeeee;
+  --offwhite: #eeeeee;
   --gold: #ffa800;
   --lightest-gray: #dddeea;
   --light-gray: #c8c8d8;
   --dark-gray: #2e2e38;
   --blue: #0164ee;
-  --bg: var(--lightest-gray);
+  --interactive: var(--blue);
+  --global-bg: var(--lightest-gray);
   --border: var(--light-gray);
+  --bg-card: var(--offwhite);
+  --bg-checkbox: var(--light-gray);
   font-family: "Public Sans", system-ui, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
     sans-serif;
-  background-color: var(--bg);
+  background-color: var(--global-bg);
+  color: var(--dark-gray);
 }
 
 body {
@@ -113,7 +117,7 @@ header h1::after {
   content: "2";
   display: inline-flex;
   background-color: var(--blue);
-  color: var(--whiteish);
+  color: var(--offwhite);
   align-items: center;
   justify-content: center;
   text-align: center;
@@ -145,7 +149,7 @@ header h1::after {
 }
 
 .home__pinned .email .card {
-  background-color: var(--whiteish);
+  background-color: var(--bg-card);
   border: 1px solid var(--border);
   height: 64px;
 }
@@ -165,7 +169,7 @@ header h1::after {
   border-bottom: 1px solid var(--border);
   padding: 0 0.5rem;
   &:hover {
-    background-color: var(--whiteish);
+    background-color: var(--bg-card);
   }
 }
 
@@ -229,7 +233,7 @@ header h1::after {
   }
   & input[type="checkbox"].email__checkbox + span {
     border: 1px solid var(--border);
-    background-color: var(--light-gray);
+    background-color: var(--bg-checkbox);
   }
   & > :is(input[type="checkbox"]:checked) ~ label {
     opacity: 0;
