--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
 :root {
-  --offwhite: #eeeeee;
+  --offwhite: #e9ecf2;
   --gold: #ffa800;
   --lightest-gray: #dddeea;
   --light-gray: #c8c8d8;
@@ -13,6 +13,7 @@
   --border: var(--light-gray);
   --bg-card: var(--offwhite);
   --bg-checkbox: var(--light-gray);
+  --max-screen: 1024px;
   font-family: "Public Sans", system-ui, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
     sans-serif;
@@ -22,6 +23,7 @@
 
 body {
   display: grid;
+  height: 100vh;
   grid-template: auto 1fr / 1fr;
 }
 
@@ -29,8 +31,22 @@ section > :first-child {
   padding: 1rem 2.4rem 0.5rem 0;
 }
 
+section header {
+  max-width: var(--max-screen);
+}
+
 section#all-emails {
   flex-grow: 1;
+}
+
+aside {
+  grid-row: 3 / span 2;
+  grid-column: 2;
+  width: 100%;
+}
+
+footer {
+  grid-column: 1 / span 2;
 }
 
 a {
@@ -46,19 +62,22 @@ ul {
   overflow: hidden;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   flex-grow: 1;
   white-space: nowrap;
 }
 
 p {
   flex-grow: 1;
+  font-size: 0.875rem;
 }
 
 h2 {
   text-align: right;
   font-size: 0.75rem;
-  font-weight: 700;
+  font-weight: 500;
 }
 
 main {
@@ -67,17 +86,23 @@ main {
   flex-direction: column;
 }
 
-nav {
+nav#primary_nav {
   grid-row: span 2 / 2;
+  /* grid-row: span 2 / 1; */
+  position: sticky;
+  z-index: 1;
+  max-width: 300px;
+  width: 100%;
 }
 
-header {
+header#main-header {
   grid-row: span 2 / 2;
   display: flex;
   align-items: center;
   justify-content: center;
+  max-width: var(--max-screen);
   gap: 1rem;
-  & > * ~ *  {
+  & > * ~ * {
     border-radius: 1rem;
   }
 }
@@ -116,8 +141,8 @@ form.search-bar .search-icon {
 header h1::after {
   content: "2";
   display: inline-flex;
-  background-color: var(--blue);
-  color: var(--offwhite);
+  background-color: var(--light-gray);
+  font-weight: 700;
   align-items: center;
   justify-content: center;
   text-align: center;
@@ -157,6 +182,11 @@ header h1::after {
 .home__list {
   display: flex;
   flex-flow: column nowrap;
+  justify-content: left;
+  height: 100%;
+}
+
+.home__list .email:first-child {
   border-top: 1px solid var(--border);
 }
 
@@ -168,6 +198,7 @@ header h1::after {
   transition: background-color 300ms ease-out;
   border-bottom: 1px solid var(--border);
   padding: 0 0.5rem;
+  max-height: 64px;
   &:hover {
     background-color: var(--bg-card);
   }
@@ -180,15 +211,18 @@ header h1::after {
   height: 64px;
 }
 
-
 .home__list .email .card.email__unread {
-  font-weight: 600;
+  font-weight: 700;
   color: #000;
 }
 
 .home__list .email .card.email__unread time.email__datetime {
   background-color: var(--light-gray);
   border: 1px solid var(--border);
+}
+
+.email {
+  max-width: var(--max-screen);
 }
 
 .email__details,
@@ -199,6 +233,7 @@ header h1::after {
   height: 100%;
   max-height: 48px;
   padding: 0.5rem 0;
+  margin: auto;
 }
 
 .email__actions,
@@ -255,6 +290,7 @@ header h1::after {
 }
 
 .email__priority {
+  max-height: 32px;
   & input[type="checkbox"].star__checkbox:checked + span {
     background: var(--gold);
   }
@@ -269,8 +305,8 @@ header h1::after {
 .email__details {
   flex-flow: column nowrap;
   justify-content: space-between;
-  max-width: 1024px;
   width: 100%;
+  max-height: 32px;
   & > * {
     align-items: center;
     max-height: 2rem;
@@ -288,8 +324,13 @@ header h1::after {
   }
 }
 
+.email__details p {
+  white-space: nowrap;
+}
+
 .email__details h3 {
   font-size: 0.875rem;
+  font-weight: 600;
 }
 
 time {
@@ -325,21 +366,102 @@ time {
   mask: url(/assets/svg/star-outline.svg) no-repeat center;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 768px) {
   body {
-    height: 100svh;
-    grid-template: auto 1fr auto / auto 1fr auto;
+    grid-template: auto max-content 1fr / min-content auto;
   }
-  nav {
+  aside {
+    grid-row: 3 / span 4;
+    grid-column: 2 / span 2;
+    width: 100%;
+  }
+  nav#primary_nav {
     width: 258px;
     grid-row: 1 / span 2;
   }
-  aside {
-    grid-row: 3 / span 1;
-    grid-column: 2;
-  }
-  header {
-    grid-column: 2 / span 3;
+  header#main-header {
+    grid-column: 2 / span 2;
     grid-row: 1;
   }
+  .home__list p,
+  .home__pinned p {
+    font-size: 1rem;
+  }
+}
+
+nav#primary_nav button {
+  position: sticky;
+  z-index: 2;
+}
+
+nav#primary_nav ul.nav__links {
+  position: absolute;
+  z-index: 2;
+  width: 300px;
+  display: flex;
+  flex-flow: column nowrap;
+}
+
+nav#primary_nav .nav__link {
+  flex-grow: 1;
+  height: 48px;
+  border-radius: 0;
+  border-bottom: 1px solid var(--border);
+}
+
+nav#primary_nav .nav__link > a {
+  margin: auto auto auto 1rem;
+  padding: 0;
+}
+
+nav#primary_nav .nav__scrim {
+  position: absolute;
+  height: 100vh;
+  background-color: var(--global-bg);
+  top: 0;
+  border-right: 1px solid var(--border);
+  width: 300px;
+}
+
+@media screen and (min-width: 768px) {
+  header#main-header {
+    margin: 1rem 0;
+    padding: 0 2.4rem 0 0;
+  }
+  nav#primary_nav button {
+    margin: 1rem 0 1rem 2rem;
+  }
+  nav#primary_nav ul.nav__links {
+    position: relative;
+    z-index: auto;
+    width: auto;
+    margin-left: 2rem;
+  }
+  nav#primary_nav .nav__scrim {
+    display: none;
+    visibility: hidden;
+  }
+  nav#primary_nav .nav__link {
+    flex-grow: 1;
+    border: none;
+  }
+  nav#primary_nav .nav__link > a {
+    margin: auto auto auto 0;
+  }
+}
+
+/* div#email__content-view {
+  position: absolute;
+  width: 50%;
+  bottom: 0;
+  right: 0;
+} */
+
+.email__content {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  height: calc(100% - 55px);
+  aspect-ratio: 3 / 4;
+  background-color: var(--offwhite);
 }
