--- a/style.css
+++ b/style.css
@@ -230,8 +230,7 @@ header h1::after {
   position: relative;
   height: 100%;
   max-height: 48px;
-  padding: 0.5rem 0;
-  margin: auto;
+  margin: auto 0;
 }
 
 .email__actions label,
@@ -258,8 +257,8 @@ header h1::after {
 .email__actions {
   align-items: center;
   justify-content: center;
-  max-width: 48px;
-  width: 100%;
+  height: 100%;
+  width: 48px;
 }
 .email__actions input[type=checkbox].email__checkbox:checked + span::before {
   background: center/80% no-repeat url(/assets/svg/checkmark-outline.svg) #0164ee;
@@ -286,9 +285,6 @@ header h1::after {
   font-size: 0.75rem;
 }
 
-.email__priority {
-  max-height: 32px;
-}
 .email__priority input[type=checkbox].star__checkbox:checked + span {
   background: var(--gold);
 }
@@ -300,17 +296,16 @@ header h1::after {
 }
 
 .email__details {
-  flex-flow: column nowrap;
-  justify-content: space-between;
+  display: grid;
+  grid-template: 0 1fr 1fr/1fr min-content;
+  grid-auto-flow: column;
   width: 100%;
-  max-height: 32px;
 }
 .email__details > * {
-  align-items: center;
-  max-height: 2rem;
-  height: 100%;
+  border-radius: 0;
 }
-.email__details::after {
+
+.email__details a::after {
   content: " ";
   position: absolute;
   cursor: pointer;
@@ -321,13 +316,27 @@ header h1::after {
   right: 0;
 }
 
-.email__details p {
-  white-space: nowrap;
-}
-
 .email__details h3 {
+  display: inline-block;
+  float: left;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   font-size: 0.875rem;
   font-weight: 600;
+}
+
+.email__details p {
+  display: inline-block;
+  float: left;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  max-width: 900px;
+}
+
+.email__details p, .email__details h3 {
+  margin: auto 0;
 }
 
 time {
@@ -384,6 +393,11 @@ time {
   .home__list p,
   .home__pinned p {
     font-size: 1rem;
+  }
+  .email__details {
+    grid-auto-flow: row;
+    grid-template-rows: 1fr;
+    grid-template-columns: 0 25% minmax(auto, 948px) min-content;
   }
 }
 nav#primary_nav button {
