--- a/style.scss
+++ b/style.scss
@@ -21,6 +21,14 @@
   color: var(--dark-gray);
 }
 
+@mixin text-truncate {
+  display:inline-block;
+  float:left;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 body {
   display: grid;
   height: 100vh;
@@ -232,8 +240,7 @@ header h1::after {
   position: relative;
   height: 100%;
   max-height: 48px;
-  padding: 0.5rem 0;
-  margin: auto;
+  margin: auto 0;
 }
 
 .email__actions,
@@ -260,8 +267,8 @@ header h1::after {
 .email__actions {
   align-items: center;
   justify-content: center;
-  max-width: 48px;
-  width: 100%;
+  height: 100%;
+  width: 48px;
   & input[type="checkbox"].email__checkbox:checked + span::before {
     background: center / 80% no-repeat url(/assets/svg/checkmark-outline.svg)
       #0164ee;
@@ -290,7 +297,6 @@ header h1::after {
 }
 
 .email__priority {
-  max-height: 32px;
   & input[type="checkbox"].star__checkbox:checked + span {
     background: var(--gold);
   }
@@ -303,16 +309,16 @@ header h1::after {
 }
 
 .email__details {
-  flex-flow: column nowrap;
-  justify-content: space-between;
+  display: grid;
+  grid-template: 0 1fr 1fr / 1fr min-content;
+  grid-auto-flow: column;
   width: 100%;
-  max-height: 32px;
   & > * {
-    align-items: center;
-    max-height: 2rem;
-    height: 100%;
+    border-radius: 0;
   }
-  &::after {
+}
+
+.email__details a::after {
     content: " ";
     position: absolute;
     cursor: pointer;
@@ -321,17 +327,22 @@ header h1::after {
     bottom: 0;
     left: 0;
     right: 0;
-  }
-}
-
-.email__details p {
-  white-space: nowrap;
 }
 
 .email__details h3 {
+  @include text-truncate;
   font-size: 0.875rem;
   font-weight: 600;
 }
+
+.email__details p {
+  @include text-truncate;
+  max-width: 900px;
+}
+
+.email__details p, .email__details h3 {
+  margin: auto 0;
+} 
 
 time {
   font-size: 0.75rem;
@@ -386,6 +397,11 @@ time {
   .home__list p,
   .home__pinned p {
     font-size: 1rem;
+  }
+  .email__details {
+    grid-auto-flow: row;
+    grid-template-rows: 1fr;
+    grid-template-columns: 0 25% minmax(auto, 948px) min-content;
   }
 }
 
