--- a/style.css
+++ b/style.css
@@ -1,7 +1,28 @@
 @charset "UTF-8";
 @import url("reset.css");
-@import url("globals.css");
 @import url("https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap");
+:root {
+  --offwhite: #e9ecf2;
+  --gold: #ffa800;
+  --lightest-gray: #dddeea;
+  --light-gray: #c8c8d8;
+  --dark-gray: #2e2e38;
+  --blue: #0164ee;
+  --interactive: var(--blue);
+  --global-bg: var(--lightest-gray);
+  --border: var(--light-gray);
+  --bg-card: var(--offwhite);
+  --bg-checkbox: var(--light-gray);
+  --max-screen: 1024px;
+  --fonts: "Public Sans", system-ui, -apple-system, sans-serif;
+}
+
+body {
+  font-family: var(--fonts);
+  background-color: var(--global-bg);
+  color: var(--dark-gray);
+}
+
 body {
   display: grid;
   height: 100vh;
@@ -69,7 +90,6 @@ main {
 
 nav#primary_nav {
   grid-row: span 2/2;
-  /* grid-row: span 2 / 1; */
   position: sticky;
   z-index: 1;
   max-width: 300px;
@@ -442,12 +462,6 @@ nav#primary_nav .nav__scrim {
     margin: auto auto auto 0;
   }
 }
-/* div#email__content-view {
-  position: absolute;
-  width: 50%;
-  bottom: 0;
-  right: 0;
-} */
 .email__content {
   position: fixed;
   bottom: 0;
