Removed unused CSS

--- a/style.css
+++ b/style.css
@@ -33,10 +33,6 @@ section > :first-child {
   padding: 1rem 2.4rem 0.5rem 0;
 }
 
-section header {
-  max-width: var(--max-screen);
-}
-
 section#all-emails {
   flex-grow: 1;
 }
@@ -68,7 +64,6 @@ h1,
 h2,
 h3 {
   flex-grow: 1;
-  white-space: nowrap;
 }
 
 p {
@@ -106,11 +101,6 @@ header#main-header {
 }
 header#main-header > * ~ * {
   border-radius: 1rem;
-}
-
-header h1 {
-  text-align: right;
-  order: 1;
 }
 
 form.search-bar {
@@ -159,6 +149,7 @@ header h1::after {
   flex-flow: row nowrap;
   border-radius: 1rem;
   gap: 0.5rem;
+  height: 100%;
 }
 .card * {
   border-radius: 1rem;
@@ -177,7 +168,6 @@ header h1::after {
 .home__pinned .email .card {
   background-color: var(--bg-card);
   border: 1px solid var(--border);
-  height: 64px;
 }
 
 .home__list {
@@ -200,6 +190,7 @@ header h1::after {
   border-bottom: 1px solid var(--border);
   padding: 0 0.5rem;
   max-height: 64px;
+  height: 100%;
 }
 .home__list .email:hover {
   background-color: var(--bg-card);
@@ -207,8 +198,6 @@ header h1::after {
 
 .home__list .email .card,
 .home__pinned .email .card {
-  align-items: center;
-  justify-content: center;
   height: 64px;
 }
 
@@ -222,16 +211,11 @@ header h1::after {
   border: 1px solid var(--border);
 }
 
-.email {
-  max-width: var(--max-screen);
-}
-
 .email__details,
 .email__priority,
 .email__actions {
   gap: 0.25rem;
   position: relative;
-  height: 100%;
   max-height: 48px;
   margin: auto 0;
 }
@@ -251,6 +235,8 @@ header h1::after {
   bottom: 0;
   left: 0;
   right: 0;
+  width: 48px;
+  height: 48px;
 }
 .email__actions label > img,
 .email__priority label > img {
