--- a/style.scss
+++ b/style.scss
@@ -9,6 +9,19 @@
   white-space: nowrap;
 }
 
+@mixin list-item {
+  display: flex;
+  flex-flow: row nowrap;
+  border-radius: 1rem;
+  gap: 0.5rem;
+  height: 100%;
+  & * {
+    border-radius: 1rem;
+    display: flex;
+    align-items: flex-start;
+  }
+}
+
 body {
   display: grid;
   height: 100vh;
@@ -17,10 +30,6 @@ body {
 
 section > :first-child {
   padding: 1rem 2.4rem 0.5rem 0;
-}
-
-section header {
-  max-width: var(--max-screen);
 }
 
 section#all-emails {
@@ -54,7 +63,6 @@ h1,
 h2,
 h3 {
   flex-grow: 1;
-  white-space: nowrap;
 }
 
 p {
@@ -92,11 +100,6 @@ header#main-header {
   & > * ~ * {
     border-radius: 1rem;
   }
-}
-
-header h1 {
-  text-align: right;
-  order: 1;
 }
 
 form.search-bar {
@@ -141,15 +144,7 @@ header h1::after {
 }
 
 .card {
-  display: flex;
-  flex-flow: row nowrap;
-  border-radius: 1rem;
-  gap: 0.5rem;
-  & * {
-    border-radius: 1rem;
-    display: flex;
-    align-items: flex-start;
-  }
+  @include list-item;
 }
 
 .home__pinned {
@@ -163,7 +158,6 @@ header h1::after {
 .home__pinned .email .card {
   background-color: var(--bg-card);
   border: 1px solid var(--border);
-  height: 64px;
 }
 
 .home__list {
@@ -186,6 +180,7 @@ header h1::after {
   border-bottom: 1px solid var(--border);
   padding: 0 0.5rem;
   max-height: 64px;
+  height: 100%;
   &:hover {
     background-color: var(--bg-card);
   }
@@ -193,8 +188,6 @@ header h1::after {
 
 .home__list .email .card,
 .home__pinned .email .card {
-  align-items: center;
-  justify-content: center;
   height: 64px;
 }
 
@@ -208,16 +201,11 @@ header h1::after {
   border: 1px solid var(--border);
 }
 
-.email {
-  max-width: var(--max-screen);
-}
-
 .email__details,
 .email__priority,
 .email__actions {
   gap: 0.25rem;
   position: relative;
-  height: 100%;
   max-height: 48px;
   margin: auto 0;
 }
@@ -237,6 +225,8 @@ header h1::after {
     bottom: 0;
     left: 0;
     right: 0;
+    width: 48px;
+    height: 48px;
   }
   & label > img {
     max-width: 100%;
