--- a/style.scss
+++ b/style.scss
@@ -71,7 +71,6 @@ p {
 }
 
 h2 {
-  text-align: right;
   font-size: 0.75rem;
   font-weight: 500;
 }
@@ -191,7 +190,7 @@ header h1::after {
   height: 64px;
 }
 
-.home__list .email .card.email__unread {
+.email__unread {
   font-weight: 700;
   color: #000;
 }
@@ -282,6 +281,7 @@ header h1::after {
   grid-template: 0 1fr 1fr / 1fr min-content;
   grid-auto-flow: column;
   width: 100%;
+  padding: 1rem 0;
   & > * {
     border-radius: 0;
   }
