--- a/style.scss
+++ b/style.scss
@@ -65,6 +65,11 @@ h3 {
   flex-grow: 1;
 }
 
+h1 {
+  font-size: 1.5rem;
+  white-space: nowrap;
+}
+
 p {
   flex-grow: 1;
   font-size: 0.875rem;
@@ -92,9 +97,9 @@ nav#primary_nav {
 header#main-header {
   grid-row: span 2 / 2;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  max-width: var(--max-screen);
+  // align-items: center;
+  // justify-content: center;
+  // max-width: var(--max-screen);
   gap: 1rem;
   & > * ~ * {
     border-radius: 1rem;
@@ -102,15 +107,18 @@ header#main-header {
 }
 
 form.search-bar {
-  display: flex;
-  flex-flow: row nowrap;
-  align-items: center;
-  background-color: #fff;
+  margin: 0 0.5rem 0 0;
+  max-width: 300px;
+  width: 100%;
+  flex-grow: 1;
+  align-self: self-end;
 }
 
 form.search-bar input[type="text"] {
-  width: 100%;
-  border: 1px solid transparent;
+  border: none;
+  margin: 0 0 0 auto;
+  padding: 0 0 0 0.875rem;
+  height: 100%;
 }
 
 form.search-bar button {
@@ -125,6 +133,18 @@ form.search-bar .search-icon {
   pointer-events: none;
   -webkit-mask: $search-icon no-repeat center;
   mask: $search-icon no-repeat center;
+}
+
+@media screen and (min-width: 768px) {
+  form.search-bar {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    background-color: #fff;
+  }
+  form.search-bar input[type="text"] {
+    width: 100%;
+  }
 }
 
 header h1::after {
@@ -203,7 +223,6 @@ header h1::after {
 .email__details,
 .email__priority,
 .email__actions {
-  gap: 0.25rem;
   position: relative;
   max-height: 48px;
   margin: auto 0;
@@ -281,7 +300,7 @@ header h1::after {
   grid-template: 0 1fr 1fr / 1fr min-content;
   grid-auto-flow: column;
   width: 100%;
-  padding: 1rem 0;
+  padding: 0.5rem 0;
   & > * {
     border-radius: 0;
   }
@@ -375,6 +394,14 @@ time {
   }
 }
 
+nav#primary_nav, header#main-header {
+  height: 48px;
+  align-items: center;
+  & > * {
+    align-items: center;
+  }
+}
+
 nav#primary_nav button {
   position: sticky;
   z-index: 2;
@@ -393,6 +420,7 @@ nav#primary_nav .nav__link {
   height: 48px;
   border-radius: 0;
   border-bottom: 1px solid var(--border);
+  width: 100%;
 }
 
 nav#primary_nav .nav__link > a {
@@ -412,7 +440,6 @@ nav#primary_nav .nav__scrim {
 @media screen and (min-width: 768px) {
   header#main-header {
     margin: 1rem 0;
-    padding: 0 2.4rem 0 0;
   }
   nav#primary_nav button {
     margin: 1rem 0 1rem 2rem;
