Adapt grid for email aside

--- a/globals.css
+++ b/globals.css
@@ -3,7 +3,7 @@
   --gold: #ffa800;
   --lightest-gray: #dddeea;
   --light-gray: #c8c8d8;
-  --dark-gray: #2e2e38;
+  --dark-gray: 46, 46, 56;
   --blue: #0164ee;
   --interactive: var(--blue);
   --global-bg: var(--lightest-gray);
@@ -11,13 +11,14 @@
   --bg-card: var(--offwhite);
   --bg-checkbox: var(--light-gray);
   --max-screen: 1024px;
-  --fonts: "Public Sans", system-ui, -apple-system, sans-serif;
+  --fonts: system-ui, -apple-system, sans-serif;
+  --text-color: rgba(var(--dark-gray), 0.8) ;
 }
 
 body {
   font-family: var(--fonts);
   background-color: var(--global-bg);
-  color: var(--dark-gray);
+  color: var(--text-color);
 }
 
 .mobile-hidden {
@@ -41,4 +42,5 @@ body {
     visibility: hidden;
     display: none;
   }
-}/*# sourceMappingURL=globals.css.map */
+}
+/* Typography *//*# sourceMappingURL=globals.css.map */
