--- a/style.scss
+++ b/style.scss
@@ -7,16 +7,16 @@
   overflow-x: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  line-height: 1.2;
 }
 
 @mixin list-item {
   display: flex;
   flex-flow: row nowrap;
-  border-radius: 1rem;
-  gap: 0.5rem;
+  border-radius: 0.5rem;
   height: 100%;
   & * {
-    border-radius: 1rem;
+    border-radius: 0.5rem;
     display: flex;
     align-items: flex-start;
   }
@@ -26,6 +26,10 @@ body {
   display: grid;
   height: 100vh;
   grid-template: auto 1fr / 1fr;
+}
+
+header, main {
+  max-width: 1024px;
 }
 
 section > :first-child {
@@ -44,10 +48,10 @@ aside {
 
 footer {
   grid-column: 1 / span 2;
+  background-color: var(--offwhite);
 }
 
 a {
-  color: var(--dark-gray);
   text-decoration: none;
 }
 
@@ -66,7 +70,7 @@ h3 {
 }
 
 h1 {
-  font-size: 1.5rem;
+  font-size: $heading-lg;
   white-space: nowrap;
 }
 
@@ -82,6 +86,7 @@ h2 {
 
 main {
   grid-column: span 2;
+  grid-row: span 2;
   display: flex;
   flex-direction: column;
 }
@@ -97,12 +102,9 @@ nav#primary_nav {
 header#main-header {
   grid-row: span 2 / 2;
   display: flex;
-  // align-items: center;
-  // justify-content: center;
-  // max-width: var(--max-screen);
   gap: 1rem;
   & > * ~ * {
-    border-radius: 1rem;
+    border-radius: 0.5rem;
   }
 }
 
@@ -112,13 +114,21 @@ form.search-bar {
   width: 100%;
   flex-grow: 1;
   align-self: self-end;
+  height: $heading-lg;
+  padding: 0.25rem;
 }
 
 form.search-bar input[type="text"] {
   border: none;
   margin: 0 0 0 auto;
-  padding: 0 0 0 0.875rem;
+  padding: 0;
   height: 100%;
+  background-color: transparent;
+}
+
+form.search-bar input[type="text"]::placeholder {
+  text-align: right;
+  color: var(--text-color);
 }
 
 form.search-bar button {
@@ -127,7 +137,7 @@ form.search-bar button {
 }
 
 form.search-bar .search-icon {
-  background: var(--dark-gray);
+  background: rgb(var(--dark-gray));
   width: 1rem;
   height: 1rem;
   pointer-events: none;
@@ -140,7 +150,8 @@ form.search-bar .search-icon {
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
-    background-color: #fff;
+    &:hover{background-color: var(--light-gray);}
+    &:focus, :focus-visible, :focus-within{background-color: var(--light-gray);}
   }
   form.search-bar input[type="text"] {
     width: 100%;
@@ -164,6 +175,7 @@ header h1::after {
 
 .card {
   @include list-item;
+  gap: 0.5rem;
 }
 
 .home__pinned {
@@ -171,12 +183,18 @@ header h1::after {
 }
 
 .home__pinned .email {
-  border-radius: 1rem;
+  border-radius: 0.5rem;
 }
 
 .home__pinned .email .card {
-  background-color: var(--bg-card);
   border: 1px solid var(--border);
+}
+
+.home__list .email, .home__pinned .email {
+  transition: background-color 300ms ease-out;
+  &:hover > .card {
+    background-color: var(--light-gray);
+  }
 }
 
 .home__list {
@@ -186,33 +204,34 @@ header h1::after {
   height: 100%;
 }
 
-.home__list .email:first-child {
-  border-top: 1px solid var(--border);
-}
-
 .home__list .email {
   flex-grow: 1;
   position: relative;
   letter-spacing: -0.4px;
   background-color: transparent;
-  transition: background-color 300ms ease-out;
-  border-bottom: 1px solid var(--border);
   padding: 0 0.5rem;
   max-height: 64px;
   height: 100%;
-  &:hover {
-    background-color: var(--bg-card);
-  }
+}
+
+.home__list .email:first-child {
+  border-top: 1px solid var(--border);
+}
+
+.home__list .email:not(:last-child) {
+  border-bottom: 1px solid var(--border);
 }
 
 .home__list .email .card,
 .home__pinned .email .card {
-  height: 64px;
+  // height: 64px;
+  height: 48px;
+  margin: 0.5rem 0;
 }
 
 .email__unread {
   font-weight: 700;
-  color: #000;
+  color: rgb(var(--dark-gray));
 }
 
 .home__list .email .card.email__unread time.email__datetime {
@@ -271,7 +290,7 @@ header h1::after {
 
 .email__actions .checkmark::before {
   content: " ";
-  border-radius: 1rem;
+  border-radius: 0.5rem;
   pointer-events: none;
   width: 1.5rem;
   height: 1.5rem;
@@ -284,11 +303,12 @@ header h1::after {
 }
 
 .email__priority {
+  gap: 0.25rem;
   & input[type="checkbox"].star__checkbox:checked + span {
     background: var(--gold);
   }
   & input[type="checkbox"].star__checkbox + span {
-    background: var(--dark-gray);
+    background: rgb(var(--dark-gray));
   }
   & > :is(input[type="checkbox"]:checked) ~ label {
     opacity: 0;
@@ -323,10 +343,19 @@ header h1::after {
   font-weight: 600;
 }
 
-.email__details p {
+.email__details p, .email__details p > span {
   @include text-truncate;
   max-width: 900px;
   line-height: 1.2;
+}
+
+.email__details p > span {
+  display: inline-flex;
+  font-weight: 600;
+}
+
+.email__details p > span::after {
+  content: "\00a0 –\00a0";
 }
 
 .email__details p, .email__details h3 {
@@ -368,19 +397,26 @@ time {
 
 @media screen and (min-width: 768px) {
   body {
-    grid-template: auto max-content 1fr / min-content auto;
+    grid-template: auto max-content 1fr/min-content auto calc(100vw * 56 / 128.0);
+  }
+  main {
+    grid-row: 2 / span 2;
+    grid-column: 2 / span 1;
   }
   aside {
-    grid-row: 3 / span 4;
-    grid-column: 2 / span 2;
+    grid-row: 1 / span 3;
+    grid-column: 3;
     width: 100%;
   }
+  footer {
+    grid-column: 1 /span 3;
+  }
   nav#primary_nav {
-    width: 258px;
+    width: 168px;
     grid-row: 1 / span 2;
   }
   header#main-header {
-    grid-column: 2 / span 2;
+    grid-column: 2 / span 1;
     grid-row: 1;
   }
   .home__list p,
@@ -396,7 +432,7 @@ time {
 
 nav#primary_nav, header#main-header {
   height: 48px;
-  align-items: center;
+  align-items: end;
   & > * {
     align-items: center;
   }
@@ -467,7 +503,21 @@ nav#primary_nav .nav__scrim {
   position: fixed;
   bottom: 0;
   right: 0;
+  width: 100%;
   height: calc(100% - 55px);
-  aspect-ratio: 3 / 4;
-  background-color: var(--offwhite);
+  border: 1px solid var(--border);
+  background-color: var(--global-bg);
+  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+}
+
+@media screen and (min-width: 768px) {
+  .email__content {
+    border-left: 1px solid var(--border);
+    width: calc(100vw * 56 / 128.0);
+    // height: calc(100vh * 178 / 192.0); // aspect-ratio 16 / 9
+    // width: calc(100vw * 56.25 / 192.0);  // aspect-ratio 9 / 16
+    // height: calc(100vh * 150 / 128.0); // 3 / 2
+    // width: calc(100vw * 66 / 128.0); // 2 / 3
+    overflow: hidden;
+  }
 }
